--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <group android:id="@+id/menugroup1" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <group android:id="@+id/menugroup1">
         <item
             android:id="@+id/menu1"
             android:icon="@mipmap/top_rated"
-            android:title="Top Rated"/>
+            android:title="Top Rated" />
         <item
             android:id="@+id/menu2"
             android:icon="@mipmap/top_healthy"
-            android:title="Sweets"/>
+            android:title="Sweets" />
         <item
             android:id="@+id/menu3"
             android:icon="@mipmap/top_sweet"
-            android:title="Healthy">
-        </item>
+            android:title="Healthy" />
+        <item
+            android:id="@+id/menu4"
+            android:title="Statistics" />
     </group>
 </menu>
