--- a/app/src/main/res/layout/registration_fragment.xml
+++ b/app/src/main/res/layout/registration_fragment.xml
@@ -68,6 +68,7 @@
         android:gravity="center_vertical"
         android:hint="@string/hint_password"
         android:padding="@dimen/edit_text_padding"
+        android:inputType="textPassword"
         android:textColor="@color/colorCoffeeDark"
         android:textColorHint="@color/colorLightBackground"
         android:textSize="@dimen/input_text_size"
